# logger-app

./: .env  .gitignore  Dockerfile  README.md  Untitled Diagram.drawio  build.sh  docker-compose.client.yml  docker-compose.server.yml  docker-compose.yml  id_rsa  id_rsa.pub  template_functions.h  test.cc
.github/workflows/: Logger-Pipeline-alpine.yml  Logger-Pipeline-ubuntu.yml  codeql-analysis.yml
docker/: Dockerfile  Dockerfile-centos8  docker-compose.yml  requirements.txt
docker/alpine/: Dockerfile  Dockerfile-client  Dockerfile-compose  Dockerfile-serv  Dockerfile.client  docker-compose.client.yml  docker-compose.server.yml  log.env
docker/ubuntu/: Dockerfile  Dockerfile-compose  Jenkinsfile  action.yml  docker-compose.client.yml  docker-compose.server.yml
jenkins/: Dockerfile  Jenkinsfile  jenkins-deployment.yml  jenkins-instance.yml  jenkins-volume.yml  values.yml
jenkins/compose/: Dockerfile  docker-compose.yml  jenkins-deployment.yml  jenkins-instance.yml  jenkins-sa.yml  values.yml
jenkins/node/: Dockerfile
jenkins/scripts/: jenkins.sh
k8s/: client.yml  server.yml  svc.yml
sample_compose/: Dockerfile
scripts/: jenkins.sh
src/: CMakeLists.txt  Makefile  client.cc  client.h  server.cc  test.cc  test_client.cc
src/static/js/: app.js
test/: common.sh
test/acceptance/: acceptance.sh
test/functional/: functional.sh
test/reporting/: reporting.sh
test/smoke/: smoke.sh
